[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"          # Web framework
actix-multipart = "0.6.0"    # Multipart form handling
futures = "0.3"              # Async utilities
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"           # JSON support
uuid = { version = "1.0", features = ["v4"] } # UUID generation
sanitize-filename = "0.4"    # Sanitizing filenames
env_logger = "0.10"          # Logging (optional, for debugging)
log = "0.4"                  # Logging facade (optional, for debugging)
