[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-multipart = "0.6.0"
rand = "0.8.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sanitize-filename = "0.4"
